<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AF_Mobile</string>
    <string name="title_activity_main">Weather App</string>
    
    <!-- Location -->
    <string name="location_access_denied">Location access denied</string>
    <string name="location_enabled">Location enabled</string>
    <string name="location_disabled">Location disabled</string>
    
    <!-- Weather -->
    <string name="temperature">Temperature</string>
    <string name="feels_like">Feels like</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="weather_condition">Weather</string>
    <string name="no_data">No data available</string>
    
    <!-- Actions -->
    <string name="save_query">Save Query</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="add_observation">Add Observation</string>
    <string name="mark_favorite">Mark as Favorite</string>
    <string name="history">History</string>
    <string name="get_weather">Get Weather</string>
    <string name="loading">Loading...</string>
    <string name="error">Error</string>
    <string name="retry">Retry</string>
</resources>
